# i3-scratchmenu

./: Cargo.toml  README.md
src/: main.rs
