[package]
name = "i3-scratchmenu"
version = "0.1.1"
authors = ["aedoq <aedoq@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
description = "A scratchpad manager for i3"
repository = "https://github.com/aedoq/i3-scratchmenu"

[dependencies]
"serde" = { version = "1.0", features = ["derive"] }
"serde_json" = "1.0"
